<resources>
    <string name="app_name">SQLite Application</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="id" translatable="false">ID</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Log Out</string>
    <string name="user_name" translatable="false">User name</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
</resources>