<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/img_sqlite"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/btn_go_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="30dp"
        android:background="@drawable/btn_signing_background"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white" />
</LinearLayout>


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@drawable/box_background"
    android:orientation="vertical"
    android:weightSum="11"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:text="@string/sign_in"
        android:textColor="@color/purple_500"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_login_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/et_general_background"
        android:ems="13"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:hint="@string/id"
        android:textColorHint="@color/purple_500"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"/>

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/et_general_background"
        android:ems="13"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:hint="@string/password"
        android:textColorHint="@color/purple_500"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>



    <Button
        android:id="@+id/btn_Signin"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/btn_general_background"
        android:ems="12"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>